fixed display menu in desktop view

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="top-bar">
       <h2 class="header__logo">Forexro<span>bots</span></h2>
-      <div class="hamburger hamburger--elastic" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
+      <div class="hamburger hamburger--elastic header__hamburger" tabindex="0" aria-label="Menu" role="button" aria-controls="navigation">
         <div class="hamburger-box">
           <div class="hamburger-inner"></div>
         </div>
