--- a/source/blocks/modules/header/header.html
+++ b/source/blocks/modules/header/header.html
@@ -10,11 +10,11 @@
    </button>
      <nav class="nav main-nav">
        <ul class="main-nav__list">
-         <li class="main-nav__item">Гланая</li>
-         <li class="main-nav__item">Роботы</li>
-         <li class="main-nav__item">О нас</li>
-         <li class="main-nav__item">Блог</li>
-         <li class="main-nav__item">Контакты</li>
+         <li class="main-nav__item"><a class="main-nav__item-link" href="#">Роботы</a></li>
+         <li class="main-nav__item"><a class="main-nav__item-link" href="#">Гланая</a></li>
+         <li class="main-nav__item"><a class="main-nav__item-link" href="#">О нас</a></li>
+         <li class="main-nav__item"><a class="main-nav__item-link" href="#">Блог</a></li>
+         <li class="main-nav__item"><a class="main-nav__item-link" href="#">Контакты</a></li>
        </ul>
      </nav>
    </div>
