back to top button was implemented

--- a/public/index.html
+++ b/public/index.html
@@ -531,7 +531,7 @@
       </div>
   
     </div>
-  
+    <a class="back-to-top" title="наверх">↑ наверх</a>
   </footer>
 
   <script src="js/main.js"></script>
